--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
     <!--http://www.jimsproch.com/react/-->
-    <script src="vendor/react.js"></script>
-    <script src="vendor/react-dom.js"></script>
     <script src="vendor/babel-browser.js"></script>
     <script type="text/babel" src="js/main.js"></script>
 </head>
